<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GameSelectionFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/pve"
            android:layout_width="264dp"
            android:layout_height="66dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/pve"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pvp"
            android:layout_width="264dp"
            android:layout_height="66dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/pvp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pve" />

        <Button
            android:id="@+id/eve"
            android:layout_width="264dp"
            android:layout_height="66dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/eve"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pvp" />

        <Button
            android:id="@+id/demo"
            android:layout_width="264dp"
            android:layout_height="66dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:text="@string/demo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eve" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>